# cutl

./: .gitignore  CMakeLists.txt  cutl.cuh  main.cpp  util.hpp
.devcontainer/: Dockerfile  devcontainer.json
cpu/: CMakeLists.txt  api.cpp  api.hpp
gpu/: CMakeLists.txt  api.cu  api.hpp
include/: cutl.cuh
test/: CMakeLists.txt  main.cpp  util.hpp
test/cpu/: CMakeLists.txt  api.cpp  api.hpp
test/gpu/: CMakeLists.txt  api.cu  api.hpp
